# CurbYourEmissions

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cye_bench  tmp.py
benchmark/: CMakeLists.txt  alns_bench.cpp  bench.cpp  ga_bench.cpp  gen_solver_bench.cpp  patchable_vector_bench.cpp  patching_bench.cpp  solver_bench.cpp
dataset/: convert_to_json.py
dataset/json/: E-n101-k8.json  E-n22-k4.json  E-n23-k3.json  E-n30-k3.json  E-n33-k4.json  E-n51-k5.json  E-n76-k7.json  X-n1001-k43.json  X-n143-k7.json  X-n214-k11.json  X-n351-k40.json  X-n459-k26.json  X-n573-k30.json  X-n685-k75.json  X-n749-k98.json  X-n819-k171.json  X-n916-k207.json  linear-split.json  small.json  test.json
lib/alns/: CMakeLists.txt
lib/alns/include/: acceptance_criterion.hpp  alns.hpp  operator_selection.hpp
lib/alns/include/alns/: acceptance_criterion.hpp  alns.hpp  operator_selection.hpp  random_engine.hpp
lib/alns/src/: acceptance_criterion.cpp
lib/caliper/: CMakeLists.txt
lib/caliper/include/caliper/: caliper.hpp
lib/cye/: CMakeLists.txt
lib/cye/include/: cye.hpp
lib/cye/include/alns/: acceptance_criterion.hpp  alns.hpp  operator_selection.hpp
lib/cye/include/core/: instance.hpp  node.hpp  solution.hpp  utils.hpp
lib/cye/include/cye/: destroy.hpp  destruction_nn.hpp  individual.hpp  init_heuristics.hpp  instance.hpp  mutations.hpp  node.hpp  operators.hpp  patchable_vector.hpp  repair.hpp  solution.hpp  stall_handler.hpp  utils.hpp
lib/cye/include/heuristics/: destruction_nn.hpp  init_heuristics.hpp
lib/cye/src/: destroy.cpp  destruction_nn.cpp  individual.cpp  init_heuristics.cpp  instance.cpp  instance.hpp  nodes.hpp  operators.cpp  patchable_vector.cpp  repair.cpp  solution.cpp  utils.cpp
lib/cye/src/core/: instance.cpp  node.cpp  solution.cpp  utils.cpp
lib/cye/src/heuristics/: destruction_nn.cpp  init_heuristics.cpp
lib/cye/src/neural_destruction/: destruction_nn.cpp  destruction_nn.hpp
lib/cym/: CMakeLists.txt
lib/cym/include/: cym.hpp
lib/cym/src/: lib.cpp
lib/ga/: CMakeLists.txt
lib/ga/include/ga/: common.hpp  crossover.hpp  ga.hpp  mutation.hpp  selection.hpp
lib/meta/: CMakeLists.txt
lib/meta/include/meta/: common.hpp  crossover.hpp  ga.hpp  mutation.hpp  selection.hpp  simulated_annealing.hpp
lib/meta/include/meta/alns/: acceptance_criterion.hpp  alns.hpp  operator_selection.hpp
lib/meta/include/meta/ga/: common.hpp  crossover.hpp  ga.hpp  generational_ga.hpp  local_search.hpp  mutation.hpp  selection.hpp  ssga.hpp
lib/meta/include/meta/sa/: simulated_annealing.hpp
lib/meta/src/alns/: acceptance_criterion.cpp
lib/serial/: CMakeLists.txt
lib/serial/include/: archive.hpp  exceptions.hpp  json_archive.hpp  utils.hpp
lib/serial/include/serial/: archive.hpp  json_archive.hpp  utils.hpp
lib/serial/src/: json_archive.cpp  utils.cpp
python/: .gitignore  evrp.py  heuristics.py  main.py  pyproject.toml  utils.py
python/src/hyperopt/: __init__.py
python/tests/: test_evrp.py  test_heuristics.py
scripts/: format.sh  plot_instance.py  plot_solution.py
src/: CMakeLists.txt  alns.cpp  learn.cpp  main.cpp
src/python/: main.py
test/: CMakeLists.txt  caliper_test.cpp  ga_test.cpp  heuristics_test.cpp  instance_test.cpp  patchable_vector_test.cpp  repair_test.cpp  serial_test.cpp  solution_test.cpp
test/data/: test.json
