[project]
name = "hyperopt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "leon3428", email = "leon.stjepan@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
hyperopt = "hyperopt:main"

[build-system]
requires = ["uv_build>=0.8.20,<0.9.0"]
build-backend = "uv_build"
